substrate/frame/support/test/tests/pallet_ui/task_missing_weight.stderr
error: missing `#[pallet::task_weight(..)]` attribute
  --> tests/pallet_ui/task_missing_weight.rs:34:6
   |
34 |         fn foo() -> DispatchResult {
   |            ^^^
